--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,12 @@ services:
       dockerfile: dockerfile
     env_file:
       - DjangoWebSite/docker.env
+    volumes:
+      - .:/srv/app
     ports:
       - "0.0.0.0:8000:8000"
     command: python manage.py runserver 0.0.0.0:8000
 
 volumes:
   static-data:
+
