--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,21 @@
 version: '3.8'
 services:
+  postgres:
+    image: postgres:latest
+    env_file:
+      - DjangoWebSite/docker.env
+    ports:
+      - "5432:5432"
+    volumes:
+      - "postgres-data:/var/lib/postgresql/data"
+    command: -p 5432
+
   app:
     build:
       context: .
       dockerfile: dockerfile
+    depends_on:
+      - postgres
     env_file:
       - DjangoWebSite/docker.env
     volumes:
@@ -13,5 +25,5 @@ services:
     command: python manage.py runserver 0.0.0.0:8000
 
 volumes:
+  postgres-data:
   static-data:
-
